# clumsy

./: .gitignore  CMakeLists.txt  Makefile  README.md  test_runner.cmake
src/: README.md  compiler.c  compiler.h  main.c  parser.c  parser.h  print_helpers.c  tokenizer.c  tokenizer.h  types.h
tests/: test_array.actual  test_array.cpl  test_array_basic.cpl  test_call.cpl  test_correct_fn.cpl  test_debug.cpl  test_factorial.cpl  test_factorial_iterative.cpl  test_factorial_recursive.cpl  test_fn_add.cpl  test_func.cpl  test_funcall_assignment.cpl  test_funcall_simple.cpl  test_function_call.cpl  test_function_simple.cpl  test_functions.cpl  test_if.cpl  test_loop_no_print.cpl  test_more_functions.cpl  test_power.cpl  test_simple_add.cpl  test_simple_fn.cpl  test_simple_func.cpl  test_simple_loop.cpl  test_simple_param.cpl  test_struct.cpl  test_while.cpl
